2005-06-01  Not Zed  <NotZed@Ximian.com>

	* e-shell-window-commands.c: fixed the utf8 in the last patch.

2005-06-01 S.Çaglar Onur <caglar@uludag.org.tr>

	* e-shell-window-commands.c (authors[]): Fixed my name.

2005-05-31  Rodrigo Moya <rodrigo@novell.com>

	* GNOME_Evolution_Shell.server.in.in: added missing name to
	Shell_Config_Factory object description.

2005-05-25  Not Zed  <NotZed@Ximian.com>

	* main.c (main): remove mono registrtion, this is implemented
	using a plugin now.  register the plugin type loader hook.

2005-05-16  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: fix error file build/path changes

2005-05-16  Srinivasa Ragavan <sragavan@novell.com>
	* e-component-registry.c(component_info_new) (component_info_free)(query_components):
	  e-component-registry.h:
	  e-shell-window.c (setup_widgets):
	  e-sidebar.c (button_new) (button_free) (e_sidebar_add_button) (set_mode_internal):
	  e-sidebar.h:
	  
	  Added support to read .server files for tooltips and show them in ICON only mode.
	  
2005-05-13  Rodney Dawes  <dobey@novell.com>

	* e-shell-window.c (setup_widgets): Update for the new menu layout by
	putting the "component" switching items under the "Tools" menu

2005-05-13  Shreyas Srinivasan	<sshreyas@novell.com>

	* e-shell-offline-handler.c: Remove the go->offline dialog.
	
2005-05-12  Harish Krishnaswamy  <kharish@novell.com>

	* main.c: (kill_dataserver): add evolution-data-server-1.2
	to the list of old dataserver instances.

2005-05-06  Chenthill Palanisamy  <pchenthill@novell.com>
	
	Fixes #301459
	* e-shell-importer.c: Correct the typo error and made
	the sentence more clear.

2005-05-02  JP Rosevear  <jpr@novell.com>

	* Evolution.idl: remove Evolution-common.idl

	* Makefile.am: don't build Evolution-common.idl

	* Evolution-common.idl: remove dead code
	
2005-04-29  JP Rosevear  <jpr@novell.com>

	* Makefile.am: don't build/install corba icon utils

	* Remove e-shell-corba-icon-utils.c	

2005-04-29  JP Rosevear  <jpr@novell.com>
